--- a/Code/webshop.html
+++ b/Code/webshop.html
@@ -13,51 +13,47 @@
 <body>
     <section class="product-show">
         <div class="container">
-            <div class="product-container">
+            <a href="" class="product-container">
                 <ul>
                     <li><img src="/Image/iMac 24 inch M4 16GB-256GB.jpg" alt=""></li>
                     <li>iMac 24 inch M4 16GB-256GB</li>
                     <li>6.720.000 <sup>vnd</sup></li>
                     <li>9.000.000 <sup>vnd</sup></li>
-                    <li><a href="">Mua ngay</a></li>
                 </ul>
-            </div>
-            <div class="product-container">
+            </a>
+            <a href="" class="product-container">
                 <ul>
                     <li><img src="/Image/iMac 24 inch M4 16GB-256GB.jpg" alt=""></li>
                     <li>iMac 24 inch M4 16GB-256GB</li>
                     <li>6.720.000 <sup>vnd</sup></li>
                     <li>9.000.000 <sup>vnd</sup></li>
-                    <li><a href="">Mua ngay</a></li>
                 </ul>
-            </div>
-            <div class="product-container">
+            </a>
+            <a href="" class="product-container">
                 <ul>
                     <li><img src="/Image/iMac 24 inch M4 16GB-256GB.jpg" alt=""></li>
                     <li>iMac 24 inch M4 16GB-256GB</li>
                     <li>6.720.000 <sup>vnd</sup></li>
                     <li>9.000.000 <sup>vnd</sup></li>
-                    <li><a href="">Mua ngay</a></li>
                 </ul>
-            </div>
-            <div class="product-container">
+            </a>
+            <a href="" class="product-container">
                 <ul>
                     <li><img src="/Image/iMac 24 inch M4 16GB-256GB.jpg" alt=""></li>
                     <li>iMac 24 inch M4 16GB-256GB</li>
                     <li>6.720.000 <sup>vnd</sup></li>
                     <li>9.000.000 <sup>vnd</sup></li>
-                    <li><a href="">Mua ngay</a></li>
                 </ul>
-            </div>
-            <div class="product-container">
+            </a>
+            <a href="" class="product-container">
                 <ul>
                     <li><img src="/Image/iMac 24 inch M4 16GB-256GB.jpg" alt=""></li>
                     <li>iMac 24 inch M4 16GB-256GB</li>
                     <li>6.720.000 <sup>vnd</sup></li>
                     <li>9.000.000 <sup>vnd</sup></li>
-                    <li><a href="">Mua ngay</a></li>
                 </ul>
-            </div>
+            </a>
+
         </div>
     </section>
 
