--- a/Code/website.html
+++ b/Code/website.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="website.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 
 <body>
     <header></header>
-    <div class="layout">
-
+    <section class="product-info">
+        <div class="layout">
         <div class="carousel">
             <div class="image-slideshow">
 
@@ -25,21 +26,28 @@
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
         </div>
-
-
-        <div class="info-area"></div>
-        <ul>
-            <li>
-                <h3>iMac 24 inch M4 16GB-256GB</h3>
-            </li>
-            <li>stars</li>
-            <li>6.720.000 <sup>vnd</sup></li>
-        </ul>
-
-    </div>
-
+        <div class="info-area">
+            <ul>
+                <li>
+                    <h3>iMac 24 inch M4 16GB-256GB</h3>
+                    <hr>
+                </li>
+                <li>6.720.000 <sup>vnd</sup></li>
+                <li> 4.9 <i class="fa-solid fa-star"></i></li>
+            </ul>
+            </div>
+        </div>
+    </section>
+        
     <section class="description">
-
+        <div class="product-description">
+            <h3>Thông tin sản phẩm</h3>
+            <li>Kích thước:</li>
+            <li>Chất liệu:</li>
+            <li>Trọng lượng:</li>
+            <li>Xuất xứ:</li>
+            <li>Model:</li>
+        </div>
     </section>
 </body>
 <footer></footer>
